# prsl

./: .clang-format  .gitignore  ASTVisitor_8hpp.html  ASTVisitor_8hpp__dep__incl.map  ASTVisitor_8hpp__dep__incl.md5  ASTVisitor_8hpp__incl.map  ASTVisitor_8hpp__incl.md5  ASTVisitor_8hpp_a98a996adc7ad22a8dc75b936e74b73ca_icgraph.map  ASTVisitor_8hpp_a98a996adc7ad22a8dc75b936e74b73ca_icgraph.md5  ASTVisitor_8hpp_source.html  CMakeLists.txt  Codegen_8cpp.html  Codegen_8cpp__incl.map  Codegen_8cpp__incl.md5  Codegen_8hpp.html  Codegen_8hpp__dep__incl.map  Codegen_8hpp__dep__incl.md5  Codegen_8hpp__incl.map  Codegen_8hpp__incl.md5  Codegen_8hpp_source.html  CompilerFlags_8cpp.html  CompilerFlags_8cpp__incl.map  CompilerFlags_8cpp__incl.md5  CompilerFlags_8hpp.html  CompilerFlags_8hpp__dep__incl.map  CompilerFlags_8hpp__dep__incl.md5  CompilerFlags_8hpp__incl.map  CompilerFlags_8hpp__incl.md5  CompilerFlags_8hpp_source.html  Compiler_8cpp.html  Compiler_8cpp__incl.map  Compiler_8cpp__incl.md5  Compiler_8hpp.html  Compiler_8hpp__dep__incl.map  Compiler_8hpp__dep__incl.md5  Compiler_8hpp__incl.map  Compiler_8hpp__incl.md5  Compiler_8hpp_source.html  Environment_8hpp.html  Environment_8hpp__dep__incl.map  (+678 more)
.github/workflows/: analyze-changes.yaml  analyze.yaml  cppcheck.yaml  documentation.yaml  linux-clang.yaml  linux-gcc.yaml  style.yaml  ubuntu.yml
cmake/: ClangFormat.cmake  Cppcheck.cmake  Doxygen.cmake  PVS-Studio.cmake
prsl/: config.hpp.in  main.cpp  parser.hpp  scanner.hpp
prsl/AST/: ASTVisitor.hpp  NodeTypes.cpp  NodeTypes.hpp  TreeWalkerVisitor.hpp
prsl/Codegen/: Codegen.cpp  Codegen.hpp
prsl/Compiler/: Compiler.cpp  Compiler.hpp  CompilerFlags.cpp  CompilerFlags.hpp  Executor.hpp
prsl/Compiler/Codegen/: Codegen.cpp  Codegen.hpp
prsl/Compiler/Common/: Environment.hpp  FunctionsManager.hpp
prsl/Compiler/Interpreter/: Interpreter.cpp  Interpreter.hpp  Objects.cpp  Objects.hpp
prsl/Debug/: ErrorReporter.cpp  ErrorReporter.hpp  Errors.cpp  Errors.hpp  Logger.cpp  Logger.hpp  RuntimError.hpp  RuntimeError.cpp  RuntimeError.hpp
prsl/Evaluator/: Environment.hpp  Evaluator.cpp  Evaluator.hpp  Objects.cpp  Objects.hpp
prsl/Interpreter/: Interpreter.cpp  Interpreter.hpp  Objects.cpp
prsl/Parser/: Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Token.hpp  parser.hpp
prsl/Resolver/: Resolver.hpp
prsl/Scanner/: Scanner.cpp  Scanner.hpp  scanner.hpp
prsl/Semantics/: Semantics.cpp  Semantics.hpp
prsl/Types/: Environment.hpp  FunctionsManager.hpp  Token.hpp
prsl/Utils/: Utils.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+89 more)
test/: lit.cfg.py
test/fail/: fail_0.prsl  fail_1.prsl  fail_10.prsl  fail_11.prsl  fail_12.prsl  fail_13.prsl  fail_14.prsl  fail_2.prsl  fail_3.prsl  fail_4.prsl  fail_5.prsl  fail_6.prsl  fail_7.prsl  fail_8.prsl  fail_9.prsl
test/issues/: issue11.prsl  issue13.prsl  issue24.prsl
test/pass/: pass_0.prsl  pass_1.prsl  pass_10.prsl  pass_11.prsl  pass_12.prsl  pass_13.prsl  pass_14.prsl  pass_15.prsl  pass_16.prsl  pass_17.prsl  pass_18.prsl  pass_19.prsl  pass_2.prsl  pass_20.prsl  pass_3.prsl  pass_4.prsl  pass_5.prsl  pass_6.prsl  pass_7.prsl  pass_8.prsl  pass_9.prsl
